# gs-public

./: .gitignore  Cargo.toml
giggleshitter_common/: Cargo.toml
giggleshitter_common/src/: error.rs  lib.rs  state.rs
giggleshitter_common/src/api/: mod.rs
giggleshitter_common/src/proxy/: service.rs  util.rs
giggleshitter_common/src/rewriting/: mod.rs  patches.js  rewriter.rs
giggleshitter_common/src/rewriting/html/: html_rewriter.rs
giggleshitter_napi/: Cargo.toml  package.json
giggleshitter_napi/src/: lib.rs
giggleshitter_server/: Cargo.toml
giggleshitter_server/src/: main.rs
src/: error.rs  main.rs
src/api/: encode_url.rs  service.rs
src/proxy/: service.rs  util.rs
src/rewriting/html/: html_rewriter.rs  mod.rs
