[package]
name = "giggleshitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "ws"] }
base32 = "0.5.1"
confy = { version = "0.6.1", default-features = false, features = ["ron_conf"] }
futures-util = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.6"
lol_html = "1.2.1"
reqwest = { version = "0.12.5", features = [
    "stream",
    "zstd",
    "gzip",
    "brotli",
    "deflate",
] }
reqwest-websocket = "0.4.1"
scorched = "0.5.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = "0.3.18"
