[package]
name = "giggleshitter_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.2", features = ["full"] }
giggleshitter_common = { path = "../giggleshitter_common" }
scorched = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "ws"] }
napi = { version = "2.16.8", features = ["async"] }
napi-derive = "2.16.10"
base32 = "0.5.1"

[build-dependencies]
napi-build = "2.1.3"
